infrastructure/network/ingress-controller/ingress-nginx/example/bar/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  namespace: ingress-nginx
  labels:
    app: bar-app
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
