infrastructure/network/ingress-controller/ingress-nginx/example/bar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar
  namespace: ingress-nginx
spec:
  tls:
  - hosts:
    - "*.127.0.0.1.nip.io"
    secretName: mkcert-tls-secret
  rules:
  - host: bar.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 5678
